add page structure

--- a/index.html
+++ b/index.html
@@ -10,15 +10,80 @@
 </head>
 <body>
     <header id="site_header">
-        <div class="container-fluid">
-            
+        <div class="container d-flex justify-content-between">
         </div>
-        <!-- /.container-fluid -->
+        <!-- /.container -->
     </header>
     <!-- /#site_header -->
-    <main id="site_main"></main>
+    <main id="site_main">
+        <section class="start text-center">
+            <div class="top_title"></div>
+            <!-- /.title -->
+        </section>
+        <!-- /.start -->
+        <section class="portfolio">
+            <div class="top_title"></div>
+            <!-- /.title -->
+            <div class="row">
+                <div class="col"></div>
+                <!-- /.col -->
+                <div class="col"></div>
+                <!-- /.col -->
+                <div class="col"></div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col"></div>
+                <!-- /.col -->
+                <div class="col"></div>
+                <!-- /.col -->
+                <div class="col"></div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </section>
+        <!-- /.portfolio -->
+        <section class="about">
+            <div class="top_title"></div>
+            <!-- /.title -->
+            <div class="row">
+                <div class="col"></div>
+                <!-- /.col -->
+                <div class="col"></div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </section>
+        <!-- /.about -->
+        <section class="contact">
+            <div class="top_title"></div>
+            <!-- /.title -->
+            <div class="details"></div>
+            <!-- /.details -->
+        </section>
+        <!-- /.contact -->
+    </main>
     <!-- /#site_main -->
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        <section class="info_box">
+            <div class="col">
+                <div class="address"></div>
+            </div>
+            <!-- /.col -->
+            <div class="col">
+                <div class="social"></div>
+            </div>
+            <!-- /.col -->
+            <div class="col">
+                <div class="freelancer"></div>
+            </div>
+            <!-- /.col -->
+        </section>
+        <!-- /.info_box -->
+        <section class="copy text-center"></section>
+        <!-- /.copy -->
+    </footer>
     <!-- /#site_footer -->
 </body>
 </html>
