--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="debug">
     <header id="site_header">
-        <div class="container d-flex justify-content-between">
+        <div class="container-fluid">
+            <div class="container d-flex justify-content-between align-items-center">
+                <div class="logo my-auto"></div>
+                <!-- /.logo -->
+                <div class="menu my-auto"></div>
+                <!-- /.menu -->
+            </div>
+            <!-- /.container -->
         </div>
         <!-- /.container -->
     </header>
