added structure with corrections

--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 </head>
 <body class="debug">
     <header id="site_header">
-        <div class="container-fluid">
-            <div class="container d-flex justify-content-between align-items-center">
-                <div class="logo my-auto"></div>
-                <!-- /.logo -->
-                <div class="menu my-auto"></div>
-                <!-- /.menu -->
+        <section class="top">
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <!-- /.col -->
+                    <div class="col"></div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
             <!-- /.container -->
-        </div>
-        <!-- /.container -->
+        </section>
+        <!-- /.top -->
     </header>
     <!-- /#site_header -->
     <main id="site_main">
@@ -31,61 +34,82 @@
         <section class="portfolio">
             <div class="top_title"></div>
             <!-- /.title -->
-            <div class="row">
-                <div class="col"></div>
-                <!-- /.col -->
-                <div class="col"></div>
-                <!-- /.col -->
-                <div class="col"></div>
-                <!-- /.col -->
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <!-- /.col -->
+                    <div class="col"></div>
+                    <!-- /.col -->
+                    <div class="col"></div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+                <div class="row">
+                    <div class="col"></div>
+                    <!-- /.col -->
+                    <div class="col"></div>
+                    <!-- /.col -->
+                    <div class="col"></div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col"></div>
-                <!-- /.col -->
-                <div class="col"></div>
-                <!-- /.col -->
-                <div class="col"></div>
-                <!-- /.col -->
-            </div>
-            <!-- /.row -->
+            <!-- /.container -->
         </section>
         <!-- /.portfolio -->
         <section class="about">
             <div class="top_title"></div>
             <!-- /.title -->
-            <div class="row">
-                <div class="col"></div>
-                <!-- /.col -->
-                <div class="col"></div>
-                <!-- /.col -->
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <!-- /.col -->
+                    <div class="col"></div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
-            <!-- /.row -->
+            <!-- /.container -->
         </section>
         <!-- /.about -->
         <section class="contact">
-            <div class="top_title"></div>
-            <!-- /.title -->
-            <div class="details"></div>
-            <!-- /.details -->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="top_title"></div>
+                        <!-- /.title -->
+                        <div class="details"></div>
+                        <!-- /.details -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
         </section>
         <!-- /.contact -->
     </main>
     <!-- /#site_main -->
     <footer id="site_footer">
         <section class="info_box">
-            <div class="col">
-                <div class="address"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="address"></div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="social"></div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="freelancer"></div>
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
-            <!-- /.col -->
-            <div class="col">
-                <div class="social"></div>
-            </div>
-            <!-- /.col -->
-            <div class="col">
-                <div class="freelancer"></div>
-            </div>
-            <!-- /.col -->
+            <!-- /.container -->
         </section>
         <!-- /.info_box -->
         <section class="copy text-center"></section>
