--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Bootstrap layout</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,25 +26,22 @@
     </header>
     <!-- /#site_header -->
     <main id="site_main">
-        <section class="start text-center">
+        <section class="jumbotron text-center">
             <div class="top_title"></div>
             <!-- /.title -->
         </section>
-        <!-- /.start -->
+        <!-- /.jumbotron -->
         <section class="portfolio">
             <div class="top_title"></div>
             <!-- /.title -->
             <div class="container">
-                <div class="row">
+                <div class="row row-cols-12 row-cols-md-3 row-cols-">
                     <div class="col"></div>
                     <!-- /.col -->
                     <div class="col"></div>
                     <!-- /.col -->
                     <div class="col"></div>
                     <!-- /.col -->
-                </div>
-                <!-- /.row -->
-                <div class="row">
                     <div class="col"></div>
                     <!-- /.col -->
                     <div class="col"></div>
@@ -116,5 +113,9 @@
         <!-- /.copy -->
     </footer>
     <!-- /#site_footer -->
+
+    <!-- Bootstrap’s CSS and JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </body>
 </html>
