--- a/index.html
+++ b/index.html
@@ -8,21 +8,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body class="debug">
+<body>
     <header id="site_header">
-        <section class="top">
-            <div class="container">
-                <div class="row">
-                    <div class="col"></div>
-                    <!-- /.col -->
-                    <div class="col"></div>
-                    <!-- /.col -->
-                </div>
-                <!-- /.row -->
+        <nav class="navbar navbar-dark navbar-expand-lg px-4">
+            <div class="container-fluid">
+              <a class="navbar-brand text-uppercase" href="#">Start Bootstrap</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link text-uppercase" aria-current="page" href="#">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-uppercase" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-uppercase" href="#">Contact</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <!-- /.container -->
-        </section>
-        <!-- /.top -->
+        </nav>
     </header>
     <!-- /#site_header -->
     <main id="site_main">
