--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header id="site_header">
-        <nav class="navbar navbar-dark navbar-expand-lg px-4">
+        <nav class="navbar navbar-dark navbar-expand-md px-4">
             <div class="container-fluid">
               <a class="navbar-brand text-uppercase" href="#">Start Bootstrap</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,19 +32,34 @@
               </div>
             </div>
         </nav>
+        <!-- nav -->
     </header>
     <!-- /#site_header -->
     <main id="site_main">
         <section class="jumbotron text-center">
-            <div class="top_title"></div>
-            <!-- /.title -->
+            <div class="images">
+                <img src="./assets/img/avatar.svg" alt="">
+            </div>
+            <!-- /.images -->
+            <h1 class="text-uppercase pt-2">Start Bootstrap</h1>
+            <div class="divider d-flex align-items-center justify-content-center py-2">
+                <div class="line"></div>
+                <i class="fa-solid fa-star px-3"></i>
+                <div class="line"></div>
+            </div>
+            <!-- /.divider -->
+            <ul class="list-unstyled text-uppercase d-flex justify-content-center gap-1 pb-5">
+                <li>Graphic Artist</li>
+                <li>- Web Designer</li>
+                <li>- Illustrator</li>
+            </ul>
         </section>
         <!-- /.jumbotron -->
         <section class="portfolio">
             <div class="top_title"></div>
             <!-- /.title -->
             <div class="container">
-                <div class="row row-cols-12 row-cols-md-3 row-cols-">
+                <div class="row row-cols-12 row-cols-md-6 row-cols-lg-4">
                     <div class="col"></div>
                     <!-- /.col -->
                     <div class="col"></div>
