add section portfolio

--- a/index.html
+++ b/index.html
@@ -56,21 +56,38 @@
         </section>
         <!-- /.jumbotron -->
         <section class="portfolio">
-            <div class="top_title"></div>
-            <!-- /.title -->
+            <h2 class=" text-center text-uppercase pt-2">Portfolio</h2>
+            <div class="divider d-flex align-items-center justify-content-center pt-2 pb-4">
+                <div class="line"></div>
+                <i class="fa-solid fa-star px-3"></i>
+                <div class="line"></div>
+            </div>
+            <!-- /.divider -->
             <div class="container">
-                <div class="row row-cols-12 row-cols-md-6 row-cols-lg-4">
-                    <div class="col"></div>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-4">
+                    <div class="col">
+                        <img src="./assets/img/cabin.png" class="border_radius" alt="">
+                    </div>
                     <!-- /.col -->
-                    <div class="col"></div>
+                    <div class="col">
+                        <img src="./assets/img/cake.png" class="border_radius" alt="">
+                    </div>
                     <!-- /.col -->
-                    <div class="col"></div>
+                    <div class="col">
+                        <img src="./assets/img/circus.png" class="border_radius" alt="">
+                    </div>
                     <!-- /.col -->
-                    <div class="col"></div>
+                    <div class="col">
+                        <img src="./assets/img/game.png" class="border_radius" alt="">
+                    </div>
                     <!-- /.col -->
-                    <div class="col"></div>
+                    <div class="col">
+                        <img src="./assets/img/safe.png" class="border_radius" alt="">
+                    </div>
                     <!-- /.col -->
-                    <div class="col"></div>
+                    <div class="col">
+                        <img src="./assets/img/submarine.png" class="border_radius" alt="">
+                    </div>
                     <!-- /.col -->
                 </div>
                 <!-- /.row -->
