--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </ul>
         </section>
         <!-- /.jumbotron -->
-        <section class="portfolio">
+        <section class="portfolio pb-5">
             <h2 class=" text-center text-uppercase pt-2">Portfolio</h2>
             <div class="divider d-flex align-items-center justify-content-center pt-2 pb-4">
                 <div class="line"></div>
@@ -95,22 +95,46 @@
             <!-- /.container -->
         </section>
         <!-- /.portfolio -->
-        <section class="about">
-            <div class="top_title"></div>
-            <!-- /.title -->
+        <section class="about pb-5">
+            <h2 class=" text-center text-uppercase pt-2">About</h2>
+            <div class="divider d-flex align-items-center justify-content-center pt-2 pb-4">
+                <div class="line"></div>
+                <i class="fa-solid fa-star px-3"></i>
+                <div class="line"></div>
+            </div>
+            <!-- /.divider -->
             <div class="container">
-                <div class="row">
-                    <div class="col"></div>
+                <div class="row row-cols-1 row-cols-md-2 gy-4">
+                    <div class="col">
+                        <p>
+                            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optonal LESS stylesheets for easy customization.
+                        </p>
+                    </div>
                     <!-- /.col -->
-                    <div class="col"></div>
+                    <div class="col">
+                        <p>
+                            Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
+                        </p>
+                    </div>
                     <!-- /.col -->
                 </div>
                 <!-- /.row -->
             </div>
             <!-- /.container -->
+            <div class="download text-center">
+                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-download"></i> Download</button>
+            </div>
+            <!-- /.download -->
         </section>
         <!-- /.about -->
-        <section class="contact">
+        <section class="contact pb-5">
+            <h2 class=" text-center text-uppercase pt-2">Contact Me</h2>
+            <div class="divider d-flex align-items-center justify-content-center pt-2 pb-4">
+                <div class="line"></div>
+                <i class="fa-solid fa-star px-3"></i>
+                <div class="line"></div>
+            </div>
+            <!-- /.divider -->
             <div class="container">
                 <div class="row">
                     <div class="col">
