--- a/index.html
+++ b/index.html
@@ -11,28 +11,34 @@
 </head>
 <body>
     <header id="site_header">
-        <nav class="navbar navbar-dark navbar-expand-md px-4">
-            <div class="container-fluid">
-              <a class="navbar-brand text-uppercase" href="#">Start Bootstrap</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" aria-current="page" href="#">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="#">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="#">Contact</a>
-                  </li>
-                </ul>
-              </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <nav class="navbar navbar-dark navbar-expand-md">
+                        <div class="container-fluid">
+                          <a class="navbar-brand text-uppercase" href="#">Start Bootstrap</a>
+                          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                          </button>
+                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                              <li class="nav-item">
+                                <a class="nav-link text-uppercase" aria-current="page" href="#">Portfolio</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link text-uppercase" href="#">About</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link text-uppercase" href="#">Contact</a>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                    </nav>
+                    <!-- nav -->
+                </div>
             </div>
-        </nav>
-        <!-- nav -->
+        </div>
     </header>
     <!-- /#site_header -->
     <main id="site_main">
@@ -164,9 +170,9 @@
     </main>
     <!-- /#site_main -->
     <footer id="site_footer">
-        <section class="info_box py-5">
+        <section class="info_box py-2">
             <div class="container">
-                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3">
+                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center">
                     <div class="col">
                         <div class="address text-center py-3">
                             <h4 class="text-uppercase">Location</h4>
